implementing network info with test

--- a/clean_architecture_course/pubspec.yaml
+++ b/clean_architecture_course/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   # Functional programming thingies
   dartz: ^0.10.1
   # Remote API
-  connectivity: ^3.0.6
+  internet_connection_checker: ^1.0.0+1
   http: ^0.13.5
   # Local cache
   shared_preferences: ^2.0.18
